# have_done

./: .coveragerc  .deepsource.toml  .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  Makefile  changelog.md  conftest.py  docker-compose.yml  manage.py  package.json  pylama.ini  pyproject.toml  pytest.ini  readme.md  stack.yml  webpack.config.js
.github/workflows/: ci.yml  codeql-analysis.yml  docker.yml  statics.yml
assets/sass/: _custom.scss  _projects.scss  _variables.scss  style.scss
backups/: config.py  settings.py  urls.py  wsgi.py
factories/: logs.py  productivity.py  profiles.py  sync.py  user.py
fixtures/: dev.yaml
logs/: admin.py  helpers.py  models.py  serializers.py  urls.py  views.py
logs/migrations/: 0001_initial.py  0002_auto_20190920_1853.py  0003_auto_20190920_1854.py  0004_auto_20190920_1915.py  0005_auto_20190920_1918.py  0006_pullrequest.py  0007_auto_20200212_2021.py  0008_pullrequest_html_url.py  0009_auto_20200212_2050.py  0010_repository_project.py  0011_alter_backup_options.py  0012_repository_private.py  0013_repository_watch.py  0014_auto_20210518_1004.py  0015_auto_20210722_2026.py
logs/templatetags/: logs_extras.py
logs/tests/: test_importers.py  test_models.py
nginx/: Dockerfile
nginx/sites-enabled/: django.conf
productivity/: admin.py  api.py  apps.py  helpers.py  models.py  serializers.py  tasks.py  urls.py
profiles/: admin.py  models.py  tasks.py  urls.py  views.py
sync/: admin.py  api.py  decorators.py  models.py  tasks.py  urls.py  views.py
templates/: _card.html  base.html  home.html
(+116 files in other folders)
